admin-service/src/main/java/com/example/adminservice/infra/error/CustomException.java
package com.example.adminservice.infra.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCodet errorCode;
    private final String method;
}
